--- a/lince/LinceJ/nbproject/private/private.properties
+++ b/lince/LinceJ/nbproject/private/private.properties
@@ -3,7 +3,8 @@ auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 endorsed.javafx.ant.classpath=.
 file.reference.jfoenix-8.0.10.jar=/Users/sauloluz/LinceJ/lince/lince/LinceJ/lib/jfoenix-8.0.10.jar
 file.reference.jfoenix-8.0.10.jar-1=/Users/sauloluz/LinceJ/lince/lince/LinceJ/lib/jfoenix-8.0.10.jar
-file.reference.mysql-connector-java-5.1.49-bin.jar-1=/Users/sauloluz/LinceJ/lince/lince/LinceJ/lib/mysql-connector-java-5.1.49-bin.jar
+file.reference.jfoenix-8.0.10.jar-2=/Users/sauloluz/LinceJ/lince/lince/LinceJ/lib/jfoenix-8.0.10.jar
+file.reference.mysql-connector-java-5.1.49-bin.jar-1=/Users/sauloluz/LinceJ/lince/lince/LinceJ/Lib/mysql-connector-java-5.1.49-bin.jar
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=/usr/bin/open
 user.properties.file=/Users/sauloluz/Library/Application Support/NetBeans/8.2/build.properties
