--- a/lince/LinceJ/nbproject/project.properties
+++ b/lince/LinceJ/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -30,10 +29,7 @@ dist.jar=${dist.dir}/LinceJava.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jfoenix-8.0.10.jar=/Users/sauloluz/Google Drive File Stream/My Drive/Saulo/LinceJ/jfoenix-8.0.10.jar
-file.reference.jfoenix-8.0.10.jar-1=jfoenix-8.0.10.jar
 file.reference.jfoenix-8.0.10.jar-2=dist\\lib\\jfoenix-8.0.10.jar
-file.reference.jfoenix-8.0.10.jar-3=dependencias\\jfoenix-8.0.10.jar
 file.reference.mysql-connector-java-5.1.49-bin.jar-1=dist\\lib\\mysql-connector-java-5.1.49-bin.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -41,14 +37,12 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.jfoenix-8.0.10.jar}:\
-    ${file.reference.jfoenix-8.0.10.jar-1}:\
     ${file.reference.mysql-connector-java-5.1.49-bin.jar-1}:\
-    ${file.reference.jfoenix-8.0.10.jar-2}:\
-    ${file.reference.jfoenix-8.0.10.jar-3}
+    ${file.reference.jfoenix-8.0.10.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -75,11 +69,16 @@ javafx.classpath.extension=\
     ${java.home}/lib/javaws.jar:\
     ${java.home}/lib/deploy.jar:\
     ${java.home}/lib/plugin.jar
+javafx.deploy.adddesktopshortcut=false
+javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
+javafx.deploy.disable.proxy=false
 javafx.deploy.embedJNLP=true
 javafx.deploy.includeDT=true
+javafx.deploy.installpermanently=false
+javafx.deploy.permissionselevated=false
 # Set true to prevent creation of temporary copy of deployment artifacts before each run (disables concurrent runs)
 javafx.disable.concurrent.runs=false
 # Set true to enable multiple concurrent runs of the same WebStart or Run-in-Browser project
@@ -100,6 +99,9 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
+javafx.signing.blob=false
+javafx.signing.enabled=false
+javafx.signing.type=notsigned
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
@@ -110,6 +112,8 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
+native.bundling.enabled=true
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
